--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
 	"name": "@meronex/form",
-	"version": "1.0.2",
-	"description": "A simple react form validation component for MUI React  (and potential other)",
+	"version": "1.0.3",
+	"description": "A dead simple react form validation component for MUI React (and potential other)",
 	"main": "index.js",
 	"module": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/meronex/meronex-form.git"
+	},
+	"homepage": "https://github.com/meronex/meronex-form#readme",
 	"keywords": [
 		"form",
 		"forms",
