--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "@meronex/form",
-	"version": "1.0.3",
-	"description": "A dead simple react form validation component for MUI React (and potential other)",
+	"version": "1.0.4",
+	"description": "Very simple react form validation component for React Material UI (and potential other)",
 	"main": "index.js",
 	"module": "index.js",
 	"scripts": {
+		"public": "npm publish --access public",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
