--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@meronex/form",
-	"version": "1.1.2",
-	"description": "Very simple react form validation component for React Material UI (and potential other)",
+	"version": "1.1.3",
+	"description": "A simple react form for React Material UI (and potential other)",
 	"main": "index.js",
 	"module": "index.js",
 	"scripts": {
